// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export Ordered List list with formatting 1`] = `
Array [
  Object {
    "items": Array [
      Array [
        Object {
          "styles": Array [
            "Bold",
          ],
          "type": "Text",
          "value": "Tex",
        },
        Object {
          "href": "#",
          "target": "_blank",
          "type": "Link",
          "value": Array [
            Object {
              "styles": Array [],
              "type": "Text",
              "value": "t",
            },
          ],
        },
      ],
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
    ],
    "listType": "Number",
    "type": "List",
  },
]
`;

exports[`Export Ordered List list with multiple child 1`] = `
Array [
  Object {
    "items": Array [
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
    ],
    "listType": "Number",
    "type": "List",
  },
]
`;

exports[`Export Ordered List list with one child 1`] = `
Array [
  Object {
    "items": Array [
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
    ],
    "listType": "Number",
    "type": "List",
  },
]
`;

exports[`Export Unordered List list with formatting 1`] = `
Array [
  Object {
    "items": Array [
      Array [
        Object {
          "styles": Array [
            "Bold",
          ],
          "type": "Text",
          "value": "Tex",
        },
        Object {
          "href": "#",
          "target": "_blank",
          "type": "Link",
          "value": Array [
            Object {
              "styles": Array [],
              "type": "Text",
              "value": "t",
            },
          ],
        },
      ],
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
    ],
    "listType": "Bullet",
    "type": "List",
  },
]
`;

exports[`Export Unordered List list with multiple child 1`] = `
Array [
  Object {
    "items": Array [
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
    ],
    "listType": "Bullet",
    "type": "List",
  },
]
`;

exports[`Export Unordered List list with one child 1`] = `
Array [
  Object {
    "items": Array [
      Array [
        Object {
          "styles": Array [],
          "type": "Text",
          "value": "Text",
        },
      ],
    ],
    "listType": "Bullet",
    "type": "List",
  },
]
`;
